# num-dual

./: .buildinfo  .gitignore  CHANGELOG.md  Cargo.toml  README.md  api.html  azure-pipelines.yml  examples.html  genindex.html  index.html  license-apache  license-mit  objects.inv  pyproject.toml  search.html  searchindex.js  write_test.ipynb  write_tests.ipynb
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree
.github/workflows/: documentation.yml  release.yml  rust.yml  wheels.yml
_sources/: examples.rst.txt  index.rst.txt
_static/: documentation_options.js
benches/: benchmark.rs
build_wheel/: Cargo.toml
build_wheel/src/: lib.rs
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: peng_robinson.html  peng_robinson.ipynb
num-hyperdual-python/: Cargo.toml
num-hyperdual-python/hyperdual/: __init__.py
num-hyperdual-python/src/: lib.rs
src/: array.rs  bessel.rs  cast.rs  derivative.rs  derivatives.rs  derivatives2.rs  dual.rs  dual2.rs  dual2_vec.rs  dual3.rs  dual_n.rs  dual_size.rs  dual_vec.rs  explicit.rs  hd2.rs  hd3.rs  hd_scal.rs  hyperdual.rs  hyperdual2.rs  hyperdual_mn.rs  hyperdual_n.rs  hyperdual_vec.rs  hyperhyperdual.rs  impl_derivatives.rs  implicit.rs  lib.rs  linalg.rs  macros.rs  macros2.rs  nalgebra_macros.rs  python_macro.rs  static_mat.rs  static_vec.rs
src/datatypes/: derivative.rs  dual.rs  dual2.rs  dual2_vec.rs  dual3.rs  dual_vec.rs  hyperdual.rs  hyperdual_vec.rs  hyperhyperdual.rs  mod.rs  real.rs
src/linalg/: linalg_ndarray.rs  lu.rs  mod.rs  static_mat.rs
src/python/: dual.rs  dual2.rs  dual3.rs  hyperdual.rs  hyperdual2.rs  hyperhyperdual.rs  macros.rs  mod.rs
tests/: nalgebra_api.rs  test_dual.rs  test_dual2.rs  test_dual2_vec.rs  test_dual3.rs  test_dual_n.rs  test_dual_vec.rs  test_hd2.rs  test_hd3.rs  test_hyperdual.rs  test_hyperdual2.rs  test_hyperdual_mn.rs  test_hyperdual_n.rs  test_hyperdual_vec.rs  test_hyperhyperdual.rs  test_linalg.rs  test_real.rs  test_serde.rs
