[package]
name = "num-dual"
version = "0.6.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <prehner@ethz.ch>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Generalized (hyper) dual numbers for the calculation of exact (partial) derivatives"
homepage = "https://github.com/itt-ustutt/num-dual"
repository = "https://github.com/itt-ustutt/num-dual"
keywords = ["mathematics", "numerics", "differentiation"]
categories = ["data-structures", "science", "mathematics"]
exclude = ["/.github/*", "*.ipynb", "./docs/*"]

[dependencies]
num-traits = "0.2"
nalgebra = "0.32"
pyo3 = { version = "0.18", optional = true, features = ["multiple-pymethods"] }
ndarray = { version = "0.15", optional = true }
numpy = { version = "0.18", optional = true }
approx = "0.5"

[profile.release]
lto = true

[features]
default = []
python = ["pyo3", "numpy", "ndarray"]
linalg = ["ndarray"]

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false
