[package]
name = "num_dual"
version = "0.5.1"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <prehner@ethz.ch>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
description = "Generalized (hyper) dual numbers for the calculation of exact (partial) derivatives"
homepage = "https://github.com/itt-ustutt/num-dual"
repository = "https://github.com/itt-ustutt/num-dual"
keywords = ["mathematics", "numerics", "differentiation"]
categories = ["data-structures", "science", "mathematics"]
exclude = ["/.github/*", "*.ipynb", "./docs/*"]

[lib]
name = "num_dual"
crate-type = ["cdylib"]

[dependencies]
num-dual = { path = "..", features = ["python"]}
pyo3 = { version = "0.16", features = ["extension-module", "abi3", "abi3-py37", "multiple-pymethods"] }
